# celaeno

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  conanfile.py  conanfile.txt
cmake/: celaeno-config.cmake.in  colors.cmake
doc/: .coarsening.autosave.xopp  blueprint-edmonds-algorithm.ipe  blueprint-levelized-nested-dissection.ipe  breadth-first-search.ipe  circuit-tests.ipe  coarsening.xopp  heavy-edge-matching.ipe
doc/celaeno/graph/: balace-graph.xoj  barycenter.xopp  bfs.xoj  dfs.xoj  matrix-realization.xopp
doc/character/: character.kra
doc/mdbook/: book.toml
doc/mdbook/archives/: sample-a-star.tar.xz  sample-balance.tar.xz  sample-bfs.tar.xz  sample-dfs.tar.xz
doc/mdbook/doc/: SUMMARY.md  a-star.md  breadth-first-search.md  depth-first-search.md  graph-balancing.md  prerequisites.md
include/: CMakeLists.txt
include/celaeno/graph/: a-star.hpp  balance.hpp  barycenter.hpp  bfs.hpp  coarsening.hpp  crossings.hpp  dfs.hpp  hem.hpp  hook.hpp  hvm.hpp  imatrix-crossings.hpp  kahn.hpp  matrix-realization.hpp  red-card.hpp
include/celaeno/graph/views/: breadth.hpp  depth.hpp
include/celaeno/math/: cantor-pairing.hpp
test/: CMakeLists.txt  tests.cpp
test/include/celaeno/graph/: a-star.cpp  balance.cpp  barycenter.cpp  bfs.cpp  circuits.hpp  coarsening.cpp  crossings.cpp  dfs.cpp  hem.cpp  hvm.cpp  imatrix-crossings.cpp  kahn.cpp  matrix-realization.cpp  red-card.cpp
test/include/celaeno/graph/views/: breadth.cpp
test/include/celaeno/math/: cantor-pairing.cpp
